fix: h1 text color unvisible

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,14 +23,9 @@ section {
 
 h1 {
   line-height: 1.5 !important;
-  background-color: #2b90b6;
-  background-image: linear-gradient(45deg, #4ec5d4 10%, #146b8c 20%);
+  color: #2b90b6;
+  /* background-image: linear-gradient(45deg, #4ec5d4 10%, #146b8c 20%); */
   background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
 }
 
 h1 > code {
